# PropertyModel

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: pm.h
kernel/: delta_blue.cpp  delta_blue.h  quick_plan.h
src/: builder.h  constraint.cpp  constraint.h  constraint_graph.cpp  constraint_graph.h  except.cpp  except.h  main.cpp  priority.cpp  priority.h  property_model.h  property_model_impl.h  templates.h  variable.cpp  variable.h
src/constraint/: constraint.h  priority.h
tests/: chain.cpp  check_in.cpp  dialog_resizing.cpp  dialog_resizing_graphical_object.cpp  random_test.cpp
